[package]
name = "wl-wayland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wl = {git = "https://github.com/AidoP/wl"}
once_cell = "1.9"
libc = "0.2"
global-derive-macro = { path = "global-derive-macro" }

[features]
# Allow clients to use unsealed file descriptors for shared memory
# Introduces complexity and potential security risks as the client
# may manipulate the backing shm files if unsealed
unsealed_shm = []